--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.24",
 		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
+		"svelte-check": "^1.0.61",
 		"sveltekit-superforms": "^1.0.0-rc.2",
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
@@ -26,6 +26,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-node": "^1.2.4",
 		"@types/safe-compare": "^1.1.0",
 		"date-and-time": "^3.0.1",
 		"firebase": "^9.19.1",
