--- a/package.json
+++ b/package.json
@@ -10,31 +10,32 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"zod": "^3.21.4",
-		"firebase": "^10.1.0",
 		"date-and-time": "^3.0.1",
+		"firebase": "^10.1.0",
 		"firebase-admin": "^11.4.1",
 		"javascript-time-ago": "^2.5.9",
 		"js-search": "^2.0.1",
 		"relative-time-format": "^1.1.6",
 		"safe-compare": "^1.1.4",
-		"svelte-portal": "^2.2.0"
+		"svelte-portal": "^2.2.0",
+		"zod": "^3.21.4",
+		"tailwindcss": "^3.3.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-node": "^1.2.4",
-		"@types/safe-compare": "^1.1.0",
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.22.3",
+		"@types/safe-compare": "^1.1.0",
+		"autoprefixer": "^10.4.14",
+		"firebase-tools": "^12.4.6",
+		"postcss": "^8.4.24",
 		"svelte": "^3.47.0",
+		"svelte-check": "^3.4.6",
 		"sveltekit-superforms": "^1.0.0-rc.2",
-		"vite": "^4.3.0",
-		"tailwindcss": "^3.3.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"autoprefixer": "^10.4.14",
-		"postcss": "^8.4.24",
-		"svelte-check": "^3.4.6"
+		"vite": "^4.3.0"
 	}
 }
