--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
 		"relative-time-format": "^1.1.6",
 		"safe-compare": "^1.1.4",
 		"svelte-portal": "^2.2.0",
-		"zod": "^3.21.4",
-		"tailwindcss": "^3.3.2"
+		"tailwindcss": "^3.3.2",
+		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
@@ -29,6 +29,7 @@
 		"@sveltejs/kit": "^1.22.3",
 		"@types/safe-compare": "^1.1.0",
 		"autoprefixer": "^10.4.14",
+		"file-type": "^18.5.0",
 		"firebase-tools": "^12.4.6",
 		"postcss": "^8.4.24",
 		"svelte": "^3.47.0",
