--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.22.3",
+		"@types/mime-types": "^2.1.1",
 		"@types/safe-compare": "^1.1.0",
 		"autoprefixer": "^10.4.14",
 		"file-type": "^18.5.0",
 		"firebase-tools": "^12.4.6",
+		"mime-types": "^2.1.35",
 		"postcss": "^8.4.24",
 		"svelte": "^3.47.0",
 		"svelte-check": "^3.4.6",
