--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"postcss": "^8.4.24",
 		"svelte": "^3.47.0",
 		"svelte-check": "^3.4.6",
+		"svelte-markdown": "^0.3.0",
 		"sveltekit-superforms": "^1.0.0-rc.2",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
