--- a/firebase.json
+++ b/firebase.json
@@ -7,9 +7,9 @@
       "**/node_modules/**"
     ],
     "frameworksBackend": {
-      "region": "us-west1",
       "minInstances": 1,
-      "maxInstances": 10
+      "maxInstances": 10,
+      "region": "us-west1"
     }
   },
   "emulators": {
