--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"deploy": "firebase deploy"
+		"deploy": "firebase deploy",
+		"serve": "vite build && firebase deploy"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
@@ -23,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@google-cloud/storage": "^7.0.1",
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@types/safe-compare": "^1.1.0",
 		"autoprefixer": "^10.4.14",
