--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"mime-types": "^2.1.35",
 		"postcss": "^8.4.24",
 		"safe-compare": "^1.1.4",
+		"svelte-email": "^0.0.4",
 		"svelte-markdown": "^0.2.3",
 		"svelte-portal": "^2.2.0",
 		"sveltekit-superforms": "^1.5.3",
