--- a/package.json
+++ b/package.json
@@ -15,21 +15,27 @@
 		"serve": "npm run build && npm run replace && npm run deploy"
 	},
 	"devDependencies": {
+		"@melt-ui/pp": "^0.1.2",
+		"@melt-ui/svelte": "^0.55.3",
+		"@rollup/plugin-dsv": "^3.0.4",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.4",
-		"@sveltejs/kit": "^1.22.3",
+		"@sveltejs/kit": "^1.25.2",
 		"@types/mime-types": "^2.1.1",
+		"@types/qrcode": "^1.5.5",
 		"date-and-time": "^3.0.1",
 		"replace": "^1.2.2",
 		"svelte": "^3.47.0",
 		"svelte-adapter-firebase": "^0.15.0",
 		"svelte-check": "^3.4.6",
+		"svelte-sequential-preprocessor": "^2.0.1",
 		"tslib": "^2.4.1"
 	},
 	"type": "module",
 	"dependencies": {
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@types/safe-compare": "^1.1.0",
+		"@vavite/node-loader": "^3.0.0",
 		"autoprefixer": "^10.4.14",
 		"file-type": "^18.5.0",
 		"firebase": "^10.4.0",
@@ -37,8 +43,14 @@
 		"firebase-tools": "^12.4.8",
 		"google-auth-library": "^9.0.0",
 		"googleapis": "^126.0.1",
+		"html2pdf.js": "^0.10.1",
+		"jspdf": "^2.5.1",
+		"layercake": "^8.0.1",
 		"mime-types": "^2.1.35",
 		"postcss": "^8.4.24",
+		"qrcode": "^1.5.3",
+		"qrcode-generator": "^1.4.4",
+		"resumablejs": "^1.1.0",
 		"safe-compare": "^1.1.4",
 		"svelte-email": "^0.0.4",
 		"svelte-markdown": "^0.2.3",
@@ -47,6 +59,7 @@
 		"tailwindcss": "^3.3.3",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
+		"yootils": "^0.3.1",
 		"zod": "^3.22.1"
 	}
 }
