--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.2.4",
 		"@sveltejs/kit": "^1.25.2",
+		"@types/combined-stream": "^1.0.6",
 		"@types/mime-types": "^2.1.1",
 		"@types/qrcode": "^1.5.5",
 		"date-and-time": "^3.0.1",
@@ -37,13 +38,16 @@
 		"@types/safe-compare": "^1.1.0",
 		"@vavite/node-loader": "^3.0.0",
 		"autoprefixer": "^10.4.14",
+		"combined-stream": "^1.0.8",
 		"file-type": "^18.5.0",
+		"filesize": "^10.1.0",
 		"firebase": "^10.4.0",
 		"firebase-admin": "^11.10.1",
 		"firebase-tools": "^12.4.8",
 		"google-auth-library": "^9.0.0",
 		"googleapis": "^126.0.1",
 		"html2pdf.js": "^0.10.1",
+		"huge-uploader": "^1.0.6",
 		"jspdf": "^2.5.1",
 		"layercake": "^8.0.1",
 		"mime-types": "^2.1.35",
