--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"@egjs/svelte-grid": "^1.15.0",
 		"@notionhq/client": "^2.2.14",
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
+		"@sendgrid/mail": "^8.1.0",
 		"@tryfabric/martian": "^1.2.4",
 		"@types/safe-compare": "^1.1.0",
 		"@vavite/node-loader": "^3.0.0",
@@ -54,6 +55,7 @@
 		"jspdf": "^2.5.1",
 		"layercake": "^8.0.1",
 		"mime-types": "^2.1.35",
+		"phone": "^3.1.42",
 		"postcss": "^8.4.24",
 		"promise-all-props": "^3.0.0",
 		"qrcode": "^1.5.3",
@@ -62,9 +64,11 @@
 		"safe-compare": "^1.1.4",
 		"svelte-email": "^0.0.4",
 		"svelte-markdown": "^0.2.3",
+		"svelte-persisted-store": "^0.8.0",
 		"svelte-portal": "^2.2.0",
 		"sveltekit-superforms": "^1.5.3",
 		"tailwindcss": "^3.3.3",
+		"twilio": "^5.0.0-rc.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
 		"yootils": "^0.3.1",
